# pesronal-office

./: .gitignore  AGENTS.md  README.md  codex.sh
.codex/: config.toml
automation/: README.md
automation/cron/: hh-gmail-monitor.cron  linkedin-gmail-monitor.cron
automation/prompts/: hh-gmail-monitor.md  linkedin-gmail-monitor.md  pi-archivist.md  pi-intake-secretary.md  pi-job-search-gmail-monitor.md  pi-job-search-handoff-dispatch.md  pi-job-search-telegram-intake.md
automation/rollups/: 2026-W27-monitor-run-rollup.md
automation/runs/: 2026-06-10-0002-hh-gmail-monitor.md  2026-06-10-0402-hh-gmail-monitor.md  2026-06-10-0802-hh-gmail-monitor.md  2026-06-10-1202-linkedin-gmail-monitor.md  2026-06-10-1203-hh-gmail-monitor.md  2026-06-10-1601-linkedin-gmail-monitor.md  2026-06-10-1604-hh-gmail-monitor.md  2026-06-10-2003-hh-gmail-monitor.md  2026-06-10-2005-linkedin-gmail-monitor.md  (+277 more)
calendar/: README.md
companies/: README.md
finance/: README.md
inbox/: README.md
life/: README.md
memory/: README.md
people/: README.md
personal-projects/: README.md
secretaries/: README.md  calendar-rules.md  handoff-contract.md  intake-rules.md  operating-model.md  privacy-rules.md  routing-map.md  task-rules.md
tasks/: README.md
tools/: .gitignore  README.md
tools/headhunter-web-mcp/: .gitignore  README.md  pyproject.toml  server.py
tools/headhunter-web-mcp/hh_web/: browser.py  email.py  job_intake.py  models.py  pages.py  parser.py  tools.py
tools/headhunter-web-mcp/scripts/: auth.sh  smoke.sh
wiki/: README.md
work/: README.md
(+1390 files in other folders)
