[project]
name = "headhunter-web-mcp"
version = "0.1.0"
description = "Web-based MCP server for HeadHunter applicant workflow"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.50.0",
    "pydantic>=2.0.0",
]

[project.scripts]
headhunter-web-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hh_web", "."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
